--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -63,5 +63,6 @@
   "productWarehouseStock": "Warehouse stock",
   "productWrongProduct": "Wrong product scanned",
   "products": "Products",
+  "settingsDirectlyProcess": "Directly process",
   "warehouseReceipts": "Warehouse receipts"
 }
