--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -63,5 +63,6 @@
   "productWarehouseStock": "Magazijn voorraad",
   "productWrongProduct": "Verkeerd product gescand",
   "products": "Producten",
+  "settingsDirectlyProcess": "Direct verwerken",
   "warehouseReceipts": "Magazijnbonnen"
 }
