fix: issue type date time is not a subtype of the type string when scan product

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -64,5 +64,6 @@
   "productWrongProduct": "Wrong product scanned",
   "products": "Products",
   "settingsDirectlyProcess": "Directly process",
-  "warehouseReceipts": "Warehouse receipts"
+  "warehouseReceipts": "Warehouse receipts",
+  "dateNotCorrect": "Date not correct"
 }
