--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -64,6 +64,6 @@
   "productWrongProduct": "Wrong product scanned",
   "products": "Products",
   "settingsDirectlyProcess": "Directly process",
-  "warehouseReceipts": "Warehouse receipts",
+  "warehouseReceipts": "Picklists",
   "dateNotCorrect": "Date not correct"
 }
