--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -50,6 +50,8 @@
   "productAmountToPick": "Te picken ({unit})",
   "productAvailable": "Beschikbaar",
   "productConfirmDelete": "Weet je zeker dat je dit item wilt verwijderen?",
+  "productCancelRestAmount": "Restbedrag annuleren",
+  "productConfirm": "Bevestigen",
   "productDelete": "Verwijderen",
   "productNotFound": "Product niet gevonden",
   "productOrderline": "Orderregel",
