feat: handle add product without cache the cancel amount

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -67,5 +67,6 @@
   "products": "Products",
   "settingsDirectlyProcess": "Directly process",
   "warehouseReceipts": "Picklists",
-  "dateNotCorrect": "Date not correct"
+  "dateNotCorrect": "Date not correct",
+  "productWillBeCancel" : "Cancelled"
 }
