--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -68,5 +68,6 @@
   "settingsDirectlyProcess": "Direct verwerken",
   "warehouseReceipts": "Magazijnbonnen",
   "dateNotCorrect": "Datum niet correct",
-  "productWillBeCancel" : "Geannuleerd"
+  "productWillBeCancel" : "Geannuleerd",
+  "productCannotScan": "Scannen is met dit product niet meer toegestaan."
 }
