--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,5 +77,5 @@
   "dateNotCorrect": "Date not correct",
   "productWillBeCancel" : "Cancelled",
   "productCannotScan": "Scanning is no longer permitted with this product.",
-  "otherWarehouse": "Other warehouse {unit}"
+  "otherWarehouse": "Change your warehouse to: {unit}"
 }
