feat: implement complete picklist api and make picklists font size smaller

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,5 +77,6 @@
   "dateNotCorrect": "Date not correct",
   "productWillBeCancel" : "Cancelled",
   "productCannotScan": "Scanning is no longer permitted with this product.",
-  "otherWarehouse": "Change your warehouse to: {unit}"
+  "otherWarehouse": "Change your warehouse to: {unit}",
+  "complete": "Complete"
 }
