--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -77,5 +77,6 @@
   "dateNotCorrect": "Datum niet correct",
   "productWillBeCancel" : "Geannuleerd",
   "productCannotScan": "Scannen is met dit product niet meer toegestaan.",
-  "otherWarehouse": "Verander uw magazijn naar: {unit}"
+  "otherWarehouse": "Verander uw magazijn naar: {unit}",
+  "complete": "Afronden"
 }
