feat: reset the product page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -78,5 +78,6 @@
   "productWillBeCancel" : "Cancelled",
   "productCannotScan": "Scanning is no longer permitted with this product.",
   "otherWarehouse": "Change your warehouse to: {unit}",
-  "complete": "Complete"
+  "complete": "Complete",
+  "productScreenSearch": "Search..."
 }
