--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -78,5 +78,6 @@
   "productWillBeCancel" : "Geannuleerd",
   "productCannotScan": "Scannen is met dit product niet meer toegestaan.",
   "otherWarehouse": "Verander uw magazijn naar: {unit}",
-  "complete": "Afronden"
+  "complete": "Afronden",
+  "productScreenSearch": "Zoeken..."
 }
