feat: add order_reference and internal_memo to header of picklist screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -92,5 +92,7 @@
   "description": "Description",
   "oneScanPicksAll": "One scan picks all",
   "directMutation": "Direct mutation",
-  "processing": "Processing"
+  "processing": "Processing",
+  "reference": "Reference",
+  "note": "Note"
 }
