feat: update picklist color based on picklist status

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,5 +94,6 @@
   "directMutation": "Direct mutation",
   "processing": "Processing",
   "reference": "Reference",
-  "note": "Note"
+  "note": "Note",
+  "status": "Status"
 }
