feat: implement backorder feature

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -79,7 +79,8 @@
   "settingsDirectlyProcess": "Directly process",
   "warehouseReceipts": "Picklists",
   "dateNotCorrect": "Date not correct",
-  "productWillBeCancel" : "Cancelled",
+  "productWillBeCancel": "Cancelled",
+  "productWillBeBackorder": "Backorder",
   "productCannotScan": "Scanning is no longer permitted with this product.",
   "otherWarehouse": "Change your warehouse to: {unit}",
   "complete": "Complete",
