--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -79,7 +79,8 @@
   "settingsDirectlyProcess": "Direct verwerken",
   "warehouseReceipts": "Magazijnbonnen",
   "dateNotCorrect": "Datum niet correct",
-  "productWillBeCancel" : "Geannuleerd",
+  "productWillBeCancel": "Geannuleerd",
+  "productWillBeBackorder": "Naleveren",
   "productCannotScan": "Scannen is met dit product niet meer toegestaan.",
   "otherWarehouse": "Verander uw magazijn naar: {unit}",
   "complete": "Afronden",
