feat: implement offline mode

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -96,5 +96,6 @@
   "processing": "Processing",
   "reference": "Reference",
   "note": "Note",
-  "status": "Status"
+  "status": "Status",
+  "cannotProcessed": "Completing picklist not allowed. Still unprocessed mutations."
 }
