--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -96,5 +96,6 @@
   "processing": "Verwerken",
   "reference": "Reference",
   "note": "Notitie",
-  "status": "Staat"
+  "status": "Staat",
+  "cannotProcessed": "Afronden niet toegestaan. Nog onverwerkte mutaties."
 }
