--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -61,7 +61,7 @@
   "productAmountToPick": "Amount to pick ({unit})",
   "productAvailable": "Available",
   "productConfirmDelete": "Are you sure you want to delete this item?",
-  "productCancelRestAmount" : "Cancel rest amount",
+  "productCancelRestAmount": "Cancel rest amount",
   "productConfirm": "Confirm",
   "productDelete": "Delete",
   "productNotFound": "Product is not found",
@@ -97,9 +97,16 @@
   "reference": "Reference",
   "note": "Note",
   "unavailable": "Unavailable",
-  "statusDescending":"statusDescending",
-  "statusDiscontinued":"statusDiscontinued",
-  "count":"Count",
+  "statusDescending": "statusDescending",
+  "serial_numbers": "Serial Numbers",
+  "statusDiscontinued": "statusDiscontinued",
+  "add_serial_numbers": "Add serial numbers",
+  "receiptLineNumber": "Receipt line number",
+  "receiptCode": "Receipt code",
+  "total_scanned_serial_numbers": "Total Scanned Serial Numbers",
+  "whole_sale_data": "Wholesale data",
+  "count": "Count",
   "status": "Status",
+  "invalid_credentials": "Invalid credentials",
   "cannotProcessed": "Completing picklist not allowed. Still unprocessed mutations."
 }
